# memcached

./: .gitignore  .gitmodules  CMakeLists.txt
include/: CMakeLists.txt
include/seastar/: CMakeLists.txt  build.ninja
memcache/: CMakeLists.txt  allocation_strategy.hh  cache.h  item.h  main.cpp  memcache.cc
tests/: CMakeLists.txt  helloworld.cpp  main.cpp  test_continuous.cpp  test_distributed.cpp
